# example-incbin

./: .gitignore  CMakeLists.txt  README.md  sample.txt
src/: incbin.h  main.c
